add article swagger comment
